fix: 02-css-modules layout shift product card

--- a/02-css-modules/src/components/ProductCard/ProductCard.module.css
+++ b/02-css-modules/src/components/ProductCard/ProductCard.module.css
@@ -6,15 +6,17 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	justify-content: space-around;
 	gap: calc(var(--gap-sm)/2);
 	position: relative;
 	box-shadow: 0 3px 4px var(--shadow);
 	background-color: var(--light-color);
-
 }
 
 .cardContainer picture {
 	width: 100%;
+	min-height: 200px;
+	min-width: 200px;
 }
 
 .cardImg {
